removed Immutable collections from guava